Bug 452561 - The "Change Wallpaper..." button does nothing when the current activity is not the default one
Summary: The "Change Wallpaper..." button does nothing when the current activity is no...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: Quick Settings (other bugs)
Version First Reported In: 5.24.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-12 20:53 UTC by nicos
Modified: 2022-04-18 18:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nicos 2022-04-12 20:53:50 UTC
SUMMARY
In System settings, when I click on the "Change Wallpaper..." button nothing happens (no window opens, no error message/notification shows up). I am able to change the wall paper through Dolphin's context menu or from the "Configure Desktop and Wallpaper" dialog in the Desktop. See discussion here: https://forum.manjaro.org/t/change-wallpaper-dialog-does-not-open/107951.


STEPS TO REPRODUCE
1. Open System settings (with sidebar view).
2. Click on the "Change Wallpaper..." button

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Some dialog shows up, or the system settings app moves to a different screen.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux 5.16.14-1-Manjaro (64bit)
(available in About System)
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Display server: X11
Comment 1 Nate Graham 2022-04-14 14:49:56 UTC
I can't reproduce this on Wayland. Didn't you say you could reproduce it somewhere/somehow, Fushan?
Comment 2 Fushan Wen 2022-04-14 16:04:38 UTC
Do you use Activities and the current activity is not the default one?
Comment 3 nicos 2022-04-15 17:31:30 UTC
Yes, I didn't include it at first because I was doubtful about it, but when I remove all activities and reboot, the popup does show, so it clearly looks like it's linked to having more than one activities.
Comment 4 nicos 2022-04-15 17:32:48 UTC
(In reply to Nate Graham from comment #1)
> I can't reproduce this on Wayland. Didn't you say you could reproduce it
> somewhere/somehow, Fushan?

I'm on X11, I thought KDE had issues on Wayland. Can I switch to Wayland ?
Comment 5 Nate Graham 2022-04-18 17:59:20 UTC
Git commit f994e1301f43ae6654a97496eebf67d18c46c240 by Nate Graham, on behalf of Fushan Wen.
Committed on 18/04/2022 at 17:53.
Pushed by ngraham into branch 'master'.

shell/scripting: Consider current activity in `desktopForScreen`

This fixes "Change Wallpaper..." in System Settings unable to open the
config dialog when the current activity is not the default one.

M  +4    -2    shell/scripting/scriptengine_v1.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/f994e1301f43ae6654a97496eebf67d18c46c240
Comment 6 Nate Graham 2022-04-18 18:00:35 UTC
Git commit 35d27fb286e3de548ca76fc97a047a5bc22a245f by Nate Graham, on behalf of Fushan Wen.
Committed on 18/04/2022 at 18:00.
Pushed by ngraham into branch 'Plasma/5.24'.

shell/scripting: Consider current activity in `desktopForScreen`

This fixes "Change Wallpaper..." in System Settings unable to open the
config dialog when the current activity is not the default one.


(cherry picked from commit f994e1301f43ae6654a97496eebf67d18c46c240)

M  +4    -2    shell/scripting/scriptengine_v1.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/35d27fb286e3de548ca76fc97a047a5bc22a245f