shell/scripting: Consider current activity in `desktopForScreen`

This fixes "Change Wallpaper..." in System Settings unable to open the
config dialog when the current activity is not the default one.

BUG: 452561